5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1578_1330.log
== SUBMITION (2019-03-13 18:39:07) 
-- CODE:
print(250/6)
round(x,2)
-- EXECUTION TIME:
0.17985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 2, in <module>
    round(x,2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:39:25) 
-- CODE:
print(250/6)
round(250/6,2)
-- EXECUTION TIME:
0.137057
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:39:26) 
-- CODE:
print(250/6)
round(250/6,2)
-- EXECUTION TIME:
0.132025
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:39:42) 
-- CODE:
print(250/6)
round(print(250/6),2)
-- EXECUTION TIME:
0.132348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 2, in <module>
    round(print(250/6),2)
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:39:43) 
-- CODE:
print(250/6)
round(print(250/6),2)
-- EXECUTION TIME:
0.197762
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1330/main.py", line 2, in <module>
    round(print(250/6),2)
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:40:27) 
-- CODE:
print(round(250/6),2)

-- EXECUTION TIME:
0.197101
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:40:28) 
-- CODE:
print(round(250/6),2)

-- EXECUTION TIME:
0.176409
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:40:44) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.185127
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:40:59) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.222333
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:41:19) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.132241
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:41:20) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.119433
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:41:20) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.128117
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:41:25) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.212675
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:41:26) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.178139
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:41:26) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.112068
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:41:26) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.175574
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:41:57) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.216902
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:42:49) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.172681
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:43:33) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.150437
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:43:34) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.198907
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:43:34) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.163283
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:44:12) 
-- CODE:
print((round(250/6),2))
-- EXECUTION TIME:
0.185861
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
(42, 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:44:12) 
-- CODE:
print((round(250/6),2))
-- EXECUTION TIME:
0.133696
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
(42, 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:44:12) 
-- CODE:
print((round(250/6),2))
-- EXECUTION TIME:
0.112615
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
(42, 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:00) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.167949
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.268478
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.280623
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.113763
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.158763
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.252946
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.322323
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.322099
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.269351
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:01) 
-- CODE:
print(round(250/6),2)
-- EXECUTION TIME:
0.253058
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:23) 
-- CODE:
print(250/6round(250/6,2))
-- EXECUTION TIME:
0.169805
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6round(250/6,2))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:23) 
-- CODE:
print(250/6round(250/6,2))
-- EXECUTION TIME:
0.23042
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 1
    print(250/6round(250/6,2))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:28) 
-- CODE:
print(250/6(round(250/6,2))
-- EXECUTION TIME:
0.176505
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:28) 
-- CODE:
print(250/6(round(250/6,2))
-- EXECUTION TIME:
0.134889
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:28) 
-- CODE:
print(250/6(round(250/6,2))
-- EXECUTION TIME:
0.127883
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:45:33) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.123899
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
